@@ -28,18 +28,20 @@
  * @run testng/othervm --enable-native-access=ALL-UNNAMED SafeFunctionAccessTest
  */
 
-import java.lang.foreign.Addressable;
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.MemoryLayout;
 
+import java.lang.foreign.SegmentScope;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 
 import java.lang.foreign.VaList;
+import java.util.stream.Stream;
+
 import org.testng.annotations.*;
 
 import static org.testng.Assert.*;
@@ -56,10 +58,10 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
     @Test(expectedExceptions = IllegalStateException.class)
     public void testClosedStruct() throws Throwable {
         MemorySegment segment;
-        try (MemorySession session = MemorySession.openConfined()) {
-            segment = MemorySegment.allocateNative(POINT, session);
+        try (Arena arena = Arena.openConfined()) {
+            segment = arena.allocate(POINT);
         }
-        assertFalse(segment.session().isAlive());
+        assertFalse(segment.scope().isAlive());
         MethodHandle handle = Linker.nativeLinker().downcallHandle(
                 findNativeOrThrow("struct_func"),
                 FunctionDescriptor.ofVoid(POINT));
@@ -72,33 +74,39 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
         MethodHandle handle = Linker.nativeLinker().downcallHandle(
                 findNativeOrThrow("addr_func_6"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER, C_POINTER, C_POINTER, C_POINTER, C_POINTER));
+        record Allocation(Arena drop, MemorySegment segment) {
+            static Allocation of(MemoryLayout layout) {
+                Arena arena = Arena.openShared();
+                return new Allocation(arena, arena.allocate(layout));
+            }
+        }
         for (int i = 0 ; i < 6 ; i++) {
-            MemorySegment[] segments = new MemorySegment[]{
-                    MemorySegment.allocateNative(POINT, MemorySession.openShared()),
-                    MemorySegment.allocateNative(POINT, MemorySession.openShared()),
-                    MemorySegment.allocateNative(POINT, MemorySession.openShared()),
-                    MemorySegment.allocateNative(POINT, MemorySession.openShared()),
-                    MemorySegment.allocateNative(POINT, MemorySession.openShared()),
-                    MemorySegment.allocateNative(POINT, MemorySession.openShared())
+            Allocation[] allocations = new Allocation[]{
+                    Allocation.of(POINT),
+                    Allocation.of(POINT),
+                    Allocation.of(POINT),
+                    Allocation.of(POINT),
+                    Allocation.of(POINT),
+                    Allocation.of(POINT)
             };
             // check liveness
-            segments[i].session().close();
+            allocations[i].drop().close();
             for (int j = 0 ; j < 6 ; j++) {
                 if (i == j) {
-                    assertFalse(segments[j].session().isAlive());
+                    assertFalse(allocations[j].drop().scope().isAlive());
                 } else {
-                    assertTrue(segments[j].session().isAlive());
+                    assertTrue(allocations[j].drop().scope().isAlive());
                 }
             }
             try {
-                handle.invokeWithArguments(segments);
+                handle.invokeWithArguments(Stream.of(allocations).map(Allocation::segment).toArray());
                 fail();
             } catch (IllegalStateException ex) {
                 assertTrue(ex.getMessage().contains("Already closed"));
             }
             for (int j = 0 ; j < 6 ; j++) {
                 if (i != j) {
-                    segments[j].session().close(); // should succeed!
+                    allocations[j].drop().close(); // should succeed!
                 }
             }
         }
@@ -107,30 +115,30 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
     @Test(expectedExceptions = IllegalStateException.class)
     public void testClosedVaList() throws Throwable {
         VaList list;
-        try (MemorySession session = MemorySession.openConfined()) {
-            list = VaList.make(b -> b.addVarg(C_INT, 42), session);
+        try (Arena arena = Arena.openConfined()) {
+            list = VaList.make(b -> b.addVarg(C_INT, 42), arena.scope());
         }
-        assertFalse(list.session().isAlive());
+        assertFalse(list.segment().scope().isAlive());
         MethodHandle handle = Linker.nativeLinker().downcallHandle(
                 findNativeOrThrow("addr_func"),
                 FunctionDescriptor.ofVoid(C_POINTER));
 
-        handle.invokeExact((Addressable)list);
+        handle.invokeExact(list.segment());
     }
 
     @Test(expectedExceptions = IllegalStateException.class)
     public void testClosedUpcall() throws Throwable {
         MemorySegment upcall;
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.openConfined()) {
             MethodHandle dummy = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "dummy", MethodType.methodType(void.class));
-            upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), session);
+            upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), arena.scope());
         }
-        assertFalse(upcall.session().isAlive());
+        assertFalse(upcall.scope().isAlive());
         MethodHandle handle = Linker.nativeLinker().downcallHandle(
                 findNativeOrThrow("addr_func"),
                 FunctionDescriptor.ofVoid(C_POINTER));
 
-        handle.invokeExact((Addressable)upcall);
+        handle.invokeExact(upcall);
     }
 
     static void dummy() { }
@@ -141,9 +149,9 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
                 findNativeOrThrow("addr_func_cb"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
 
-        try (MemorySession session = MemorySession.openConfined()) {
-            VaList list = VaList.make(b -> b.addVarg(C_INT, 42), session);
-            handle.invoke(list, sessionChecker(session));
+        try (Arena arena = Arena.openConfined()) {
+            VaList list = VaList.make(b -> b.addVarg(C_INT, 42), arena.scope());
+            handle.invokeExact(list.segment(), sessionChecker(arena));
         }
     }
 
@@ -153,9 +161,9 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
                 findNativeOrThrow("addr_func_cb"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
 
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = MemorySegment.allocateNative(POINT, session);
-            handle.invoke(segment, sessionChecker(session));
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = arena.allocate(POINT);
+            handle.invokeExact(segment, sessionChecker(arena));
         }
     }
 
@@ -165,27 +173,27 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
                 findNativeOrThrow("addr_func_cb"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
 
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.openConfined()) {
             MethodHandle dummy = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "dummy", MethodType.methodType(void.class));
-            MemorySegment upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), session);
-            handle.invoke(upcall, sessionChecker(session));
+            MemorySegment upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), arena.scope());
+            handle.invokeExact(upcall, sessionChecker(arena));
         }
     }
 
-    MemorySegment sessionChecker(MemorySession session) {
+    MemorySegment sessionChecker(Arena arena) {
         try {
             MethodHandle handle = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "checkSession",
-                    MethodType.methodType(void.class, MemorySession.class));
-            handle = handle.bindTo(session);
-            return Linker.nativeLinker().upcallStub(handle, FunctionDescriptor.ofVoid(), MemorySession.openImplicit());
+                    MethodType.methodType(void.class, Arena.class));
+            handle = handle.bindTo(arena);
+            return Linker.nativeLinker().upcallStub(handle, FunctionDescriptor.ofVoid(), SegmentScope.auto());
         } catch (Throwable ex) {
             throw new AssertionError(ex);
         }
     }
 
-    static void checkSession(MemorySession session) {
+    static void checkSession(Arena arena) {
         try {
-            session.close();
+            arena.close();
             fail("Session closed unexpectedly!");
         } catch (IllegalStateException ex) {
             assertTrue(ex.getMessage().contains("acquired")); //if acquired, fine
